--- a/ProjaraWeb/WebContent/views/menadzer_akcije.html
+++ b/ProjaraWeb/WebContent/views/menadzer_akcije.html
@@ -4,7 +4,7 @@
 	
 	<div style='margin-left: 20%;margin-right: 20%'>
 		<div class='table-responsive'>
-			<table class='table'>
+			<table class='table table-bordered'>
 				<thead>
 					<tr>
 						<th colspan="7"> Akcije </th>
@@ -17,8 +17,7 @@
 						<th> To </th>
 						<th> Discount </th>
 						<th> Categories</th>
-						<th> </th>
-						<th> </th>
+						<th colspan='2'> </th>
 					</tr>
 				</thead>
 				<tbody>
@@ -27,7 +26,7 @@
 						<td> {{a.name}} </td>
 						<td> {{filterDate(a.from)}} </td>
 						<td> {{filterDate(a.until)}} </td>
-						<td> {{a.discount}} </td>
+						<td> {{a.discount}}% </td>
 						<td> 
 							<span data-ng-repeat="cat in a.categories track by $index">
 								{{$index + 1}} - {{cat.name}} <br/>
