--- a/ProjaraWeb/WebContent/views/menadzer_kategorije_kupaca.html
+++ b/ProjaraWeb/WebContent/views/menadzer_kategorije_kupaca.html
@@ -4,7 +4,7 @@
 	
 	<div style='margin-left: 20%;margin-right: 20%'>
 		<div class='table-responsive'>
-			<table class='table'>
+			<table class='table table-bordered'>
 				<thead>
 					<tr>
 						<th colspan="3"> Kategorije kupaca </th>
@@ -13,8 +13,7 @@
 					<tr>
 						<th> ID </th>
 						<th> Name </th>
-						<th>  </th>
-						<th> </th>
+						<th colspan='2'> </th>
 					</tr>
 				</thead>
 				<tbody>
