--- a/ProjaraWeb/WebContent/views/kupac_profil.html
+++ b/ProjaraWeb/WebContent/views/kupac_profil.html
@@ -7,7 +7,7 @@
 	<div class="col-md-4">
 		Ime: <input type="text" class="form-control">
 		Prezime: <input type="text" class="form-control">
-		Adresa: <br><textarea rows="4" class="form-control"></textarea>
+		Adresa: <br><textarea rows="4" class="form-control" style="resize:none"></textarea>
 	</div>
 	<div class="col-md-4">
 		Kategorija kupca: <input type="text" class="form-control" disabled>
