--- a/ProjaraWeb/WebContent/views/prijava.html
+++ b/ProjaraWeb/WebContent/views/prijava.html
@@ -66,7 +66,8 @@
 					<br/>
 				</div>
 				
-				<input type="submit" value="Log in" class="btn btn-primary btn-block">
+				<input type="submit" value="Uloguj se" class="btn btn-primary btn-block">
+				<input type="button" value="Registruj se" ng-click="registrujSe()" class="btn btn-primary btn-block">
 			</form>
 		</div>
 		
