--- a/ProjaraWeb/WebContent/views/menadzer_akcije.html
+++ b/ProjaraWeb/WebContent/views/menadzer_akcije.html
@@ -1,13 +1,13 @@
-<div data-ng-include="'views/menadzer_navBar.html'"></div>
+<!--<div data-ng-include="'views/menadzer_navBar.html'"></div>-->
 
-<div data-ng-controller="menadzer_akcijeController" style='margin-top: 7%'>
+<div data-ng-controller="menadzer_akcijeController">
 	
 	<div style='margin-left: 20%;margin-right: 20%'>
 		<div class='table-responsive'>
 			<table class='table table-bordered'>
 				<thead>
 					<tr>
-						<th colspan="7"> Akcije </th>
+						<th colspan="6"> Akcije </th>
 						<th> <button class='btn btn-primary' data-ng-click="addAction()"> Add </button> </th>
 					</tr>
 					<tr>
@@ -32,7 +32,7 @@
 								{{$index + 1}} - {{cat.name}} <br/>
 							</span>
 						</td>
-						<td> <button class='btn btn-primary' data-ng-click="deleteAction(a.code)">Delete</button> </td>
+						<!--  <td> <button class='btn btn-primary' data-ng-click="deleteAction(a.code)">Delete</button> </td>-->
 						<td> <button class='btn btn-primary' data-ng-click="modifyAction(a)"> Modify </button></td>
 					</tr>
 				</tbody>
