--- a/ProjaraWeb/WebContent/views/menadzer_newCatItem.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newCatItem.html
@@ -4,20 +4,20 @@
 		<b> {{headerMsg}} </b>
 	</div>
 	
-	<form name='f1' ng-submit="ok()">
+	<form name='f1' data-ng-submit="ok()">
 	<div class='modal-body'>
 			<p style='color: red;'> {{errorMsg}} </p>
-				<input type='text' ng-model='itemCategory.code' class="form-control" placeholder='Code' required/>
+				<input type='text' data-ng-disabled='{{disableId}}' data-ng-model='itemCategory.info.code' class="form-control" placeholder='Code' required/>
 			   	<br/>
-			   	<input type='text' ng-model='itemCategory.name' class="form-control" placeholder='Name' required/>
+			   	<input type='text' data-ng-model='itemCategory.info.name' class="form-control" placeholder='Name' required/>
 			   	<br/>
-			   	<input type='number' ng-model='itemCategory.maxDiscount' class="form-control" placeholder='Max percentage' required/>
+			   	<input type='number' step="0.001" data-ng-model='itemCategory.info.maxDiscount' class="form-control" placeholder='Max percentage' required/>
 			   	<br/>
 			   	Parent category:
 			   	<br/> <br/>
-			   	<select class="form-control" ng-model='itemCategory.parentCategory'>
-			   		<option ng-repeat="cat in categories" value='{{cat.code}}'>
-			   			{{cat.name}}
+			   	<select class="form-control" data-ng-model='itemCategory.parentCode'>
+			   		<option data-ng-repeat="cat in categories" value='{{cat.code}}'>
+			   			{{cat.code}}
 			   		</option>
 			   	</select>
 	</div>
