--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -1,11 +1,13 @@
 <div ng-controller="kupac_Controller">
 	<script type="text/ng-template" id="stablo">
-		{{ kategorija.info.name }}
-		<ul ng-if="kategorija.subCategories">
-			 <li ng-repeat="kategorija in kategorija.subCategories" ng-include="'stablo'">
-			        {{ kategorija.info.name }}
-			 </li>
-		</ul>
+		<div class="list-group">
+			<a class="list-group-item">{{kategorija.info.name}}</a>
+			<div class="list-group" ng-if="kategorija.subCategories">
+				<a class="list-group-item" ng-repeat="kategorija in kategorija.subCategories" ng-include="'stablo'">
+			    	   {{ kategorija.info.name }}
+				</a>
+			</div>
+		</div>
 	</script>
 
 
@@ -20,22 +22,13 @@
 	      <div><button class="btn" style="float:right;">Pretraži</button></div>
 	    </uib-accordion-group>
 	  </uib-accordion>
-      <!--  div id="MainMenu">
-        <div class="list-group panel" ng-repeat="kategorija in kategorije">
-        	<a href  data-target="#{{kategorija.oznaka}}" class="list-group-item list-group-item-info" data-toggle="collapse" data-parent="#{{kategorija.nadkategorija}}">{{kategorija.naziv}}</a>
-          	<div class="colapse" id="{{kategorija.oznaka}}">
-          		<a ng-repeat="podkategorija in kategorija.podkategorije" data-target="#{{podkategorija.oznaka}}" class="list-group-item" data-toggle="collapse" data-parent="#{{kategorija.oznaka}}">info.namegorija.info.name}}</a>
-          	</div>
-        </div>
-      </div-->
-      <ul>
-    		<ul>
-			    <li ng-repeat="kategorija in kategorije" ng-include="'stablo'">
-			    </li>
-			</ul>
-	  </ul>
-	
+      <div class="list-group list-group-root well">
+			<a class="list-group-item" ng-repeat="kategorija in kategorije" ng-include="'stablo'"></a>
  	 </div>
+	</div>
+  
+ 	 
+ 	 
 	 <div class="col-md-1">
 	 </div>
 	 <div class="col-md-9">
