--- a/ProjaraWeb/WebContent/views/registracija.html
+++ b/ProjaraWeb/WebContent/views/registracija.html
@@ -82,7 +82,7 @@
 					<textarea rows="4" class="form-control" ng-model="address" style="resize:none" required></textarea>
 				</div>
 				
-				<input type="submit" value="Registruj se" class="btn btn-primary btn-block">
+				<input type="submit" value="Registruj se" class="btn btn-warning btn-block">
 			</form>
 		</div>
 		
