--- a/ProjaraWeb/WebContent/views/kupac_navBar.html
+++ b/ProjaraWeb/WebContent/views/kupac_navBar.html
@@ -6,6 +6,7 @@
         </div>
 
         <div id="navbar">
+            <p class="navbar-text"><a href="#/kupac">Prodavnica</a></p>
             <p class="navbar-text navbar-right"><a href ng-click="odjava()">Odjavi se</a></p>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href ng-click="podaciOKorisniku()">korisnicko ime</a></li>
