--- a/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
@@ -4,18 +4,40 @@
 		<b> {{headerMsg}} </b>
 	</div>
 	
-	<form name='f1' ng-submit="ok()">
+	<form name='f1' data-ng-submit="ok()">
 	<div class='modal-body'>
-			 <input type='text' class='form-control' data-ng-model='newAction.name'  placeholder='Name'/>
+			 <input type='text' class='form-control' data-ng-model='newAction.info.name'  placeholder='Name' required/>
 			 <br/>
 			 From: <br/> 
-			 <input type='date' min="1970-01-01" class='form-control' data-ng-model='newAction.from'/>
+			 <input type='date' min="{{parentScope.filterDate(minDate)}}" class='form-control' data-ng-model='newAction.info.from' required/>
 			 <br/>
 			 To: <br/> 
-			 <input type='date' min="1970-01-01" class='form-control' data-ng-model='newAction.until'/>
+			 <input type='date' min="{{parentScope.filterDate(minDate)}}" class='form-control' data-ng-model='newAction.info.until' required/>
 			 <br/>
-			 <input type='number' min=0 class='form-control' data-ng-model='newAction.discount'  placeholder='Discount'/>
+			 <input type='number' min=0 class='form-control' data-ng-model='newAction.info.dicount'  placeholder='Discount' required/>
 			 <br/>
+			 <table class='table'>
+			 	<tr>
+			 		<td> <input type='text' data-ng-disabled='true' data-ng-model='selectedCategory' class='form-control' placeholder='Id'/> </td>
+			 		<td colspan='2'>
+			 			<select class='form-control' data-ng-model='selectedCategory'>
+			 				<option data-ng-repeat='cat in categories' value='{{cat.code}}'>
+			 					{{cat.name}}
+			 				</option>
+			 			</select>
+			 		 </td>
+			 		<td> <input data-ng-click='addCat()' type='button' value='+' class='btn btn-primary'/> </td>
+			 	</tr>
+			 	<tr>
+			 		<th> Id </th>
+			 		<th colspan='3'> Name </th>
+			 	</tr>
+			 	<tr data-ng-repeat="cat in newAction.categories">
+			 		<td> {{cat.code}} </td>
+			 		<td colspan='2'> {{cat.name}} </td>
+			 		<td> <input class='btn btn-primary' type='button' value='-' data-ng-click='removeCat(cat)'/> </td>
+			 	</tr>
+			 </table>
 	</div>
 	
 	<div class="modal-footer">
