--- a/ProjaraWeb/WebContent/views/menadzer_kategorije_artikala.html
+++ b/ProjaraWeb/WebContent/views/menadzer_kategorije_artikala.html
@@ -2,19 +2,19 @@
 
 <div data-ng-controller="menadzer_kategorijeArtikalaController">
 	
-	<div style='margin-left: 20%;margin-right: 20%'>
+	<div style='margin-left: 20%;margin-right: 20%;margin-bottom: 10%'>
 		<div class='table-responsive'>
 			<table class='table table-bordered'>
 				<thead>
 					<tr>
 						<th colspan="4"> Kategorije artikala </th>
-						<th style='text-align: center;'> <button class='btn btn-primary' data-ng-click="addCategory()"> Add </button> </th>
+						<th style='text-align: center;'> <button class='btn btn-primary' data-ng-click="addCategory()"> Kreiraj novu </button> </th>
 					</tr>
 					<tr>
-						<th> ID </th>
-						<th> Parent category </th>
-						<th> Name </th>
-						<th> Max percentage </th>
+						<th> Oznaka </th>
+						<th> Nadkategorija </th>
+						<th> Naziv </th>
+						<th> Maksimalan popust </th>
 						<th> </th>
 					</tr>
 				</thead>
@@ -25,7 +25,7 @@
 						<td> {{cat.info.name}} </td>
 						<td> {{cat.info.maxDiscount}}% </td>
 						<!--  <td> <button class='btn btn-primary' data-ng-click="deleteCategory(cat.info.code)">Delete</button> </td>-->
-						<td style='text-align: center;'> <button class='btn btn-primary' data-ng-click="modifyCategory(cat)"> Modify </button></td>
+						<td style='text-align: center;'> <button class='btn btn-primary' data-ng-click="modifyCategory(cat)"> Izmena </button></td>
 					</tr>
 				</tbody>
 			</table>
