--- a/ProjaraWeb/WebContent/views/menadzer_newCatItem.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newCatItem.html
@@ -7,13 +7,13 @@
 	<form name='f1' data-ng-submit="ok()">
 	<div class='modal-body'>
 			<p style='color: red;'> {{errorMsg}} </p>
-				<input type='text' data-ng-disabled='{{disableId}}' data-ng-model='itemCategory.info.code' class="form-control" placeholder='Code' required/>
+				<input type='text' data-ng-disabled='{{disableId}}' data-ng-model='itemCategory.info.code' class="form-control" placeholder='Oznaka' required/>
 			   	<br/>
-			   	<input type='text' data-ng-model='itemCategory.info.name' class="form-control" placeholder='Name' required/>
+			   	<input type='text' data-ng-model='itemCategory.info.name' class="form-control" placeholder='Naziv' required/>
 			   	<br/>
-			   	<input type='number' step="0.001" data-ng-model='itemCategory.info.maxDiscount' class="form-control" placeholder='Max percentage' required/>
+			   	<input type='number' step="0.001" data-ng-model='itemCategory.info.maxDiscount' class="form-control" placeholder='Maksimalan popust' required/>
 			   	<br/>
-			   	Parent category:
+			   	Nadkategorija:
 			   	<br/> <br/>
 			   	<select class="form-control" data-ng-model='itemCategory.parentCode'>
 			   		<option data-ng-repeat="cat in categories" value='{{cat.code}}'>
@@ -23,8 +23,8 @@
 	</div>
 	
 	<div class="modal-footer">
-		<input type='submit' value='Ok' class='btn btn-primary'/>
-		<button class='btn btn-warning' data-ng-click="cancel()">Cancel</button>
+		<input type='submit' value='Potvrda' class='btn btn-primary'/>
+		<button class='btn btn-warning' data-ng-click="cancel()">Odustani</button>
 	</div>
 	</form>
 </div>
