--- a/ProjaraWeb/WebContent/views/menadzer_newCatCustomer.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newCatCustomer.html
@@ -7,22 +7,22 @@
 	<form name='f1' data-ng-submit="ok()">
 	<div class='modal-body'>
 			<p style='color: red;'> {{errorMsg}} </p>
-				<input type='text' data-ng-disabled='{{disableId}}' data-ng-model='customerCategory.categoryCode' class="form-control" placeholder='Id' required/>
+				<input type='text' data-ng-disabled='{{disableId}}' data-ng-model='customerCategory.categoryCode' class="form-control" placeholder='Oznaka' required/>
 			   	<br/>
-			    <input type='text' data-ng-model='customerCategory.name' class="form-control" placeholder='Name' required/>
+			    <input type='text' data-ng-model='customerCategory.name' class="form-control" placeholder='Naziv' required/>
 			    <br/>
 			    <table class='table'>
 			    	<tr>
-			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.from' placeholder='From' class='form-control'/> </td>
-			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.to' placeholder='To' class='form-control'/> </td>
-			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.percentage' placeholder='Percentage' class='form-control'/> </td>
+			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.from' placeholder='Od' class='form-control'/> </td>
+			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.to' placeholder='Do' class='form-control'/> </td>
+			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.percentage' placeholder='Procenat' class='form-control'/> </td>
 			    		<td> <input type='button' value='+' class='btn btn-primary' data-ng-click="addThreshold()"/> </td>
 			    	 </tr> 
 			    	 <tr> <td colspan='4'> &nbsp </td> </tr>
 			    	  <tr>
-			    	 	<th> From </th>
-			    	 	<th> To </th>
-			    	 	<th> Percentage </th>
+			    	 	<th> Od </th>
+			    	 	<th> Do </th>
+			    	 	<th> Procenat </th>
 			    	 	<th> &nbsp </th>
 			    	 </tr>
 			    	 <tr data-ng-repeat="t in customerCategory.thresholds">
@@ -35,8 +35,8 @@
 	</div>
 	
 	<div class="modal-footer">
-		<input type='submit' value='Ok' class='btn btn-primary'/>
-		<button class='btn btn-warning' data-ng-click="cancel()">Cancel</button>
+		<input type='submit' value='Potvrda' class='btn btn-primary'/>
+		<button class='btn btn-warning' data-ng-click="cancel()">Odustani</button>
 	</div>
 	</form>
 </div>
