--- a/ProjaraWeb/WebContent/views/kupac.html
+++ b/ProjaraWeb/WebContent/views/kupac.html
@@ -37,7 +37,7 @@
 	      <div>Šifra:<input ng-model="advancedSearch.id" type="text" class="form-control"></div>
 	      <div>Naziv:<input ng-model="advancedSearch.name" value=""type="text" class="form-control"></div>
 	      <div>Kategorija:<input ng-model="advancedSearch.category" type="text" class="form-control"></div>
-	      <div>Opseg cene:<br>Minimum:<input ng-mode="advancedSearch.costRange.minCost" type="text" class="form-control" >Maksimum:<input ng-model="advancedSearch.costRange.maxCost" type="text" class="form-control"></div>
+	      <div>Opseg cene:<br>Minimum:<input ng-model="advancedSearch.costRange.minCost" type="text" class="form-control" >Maksimum:<input ng-model="advancedSearch.costRange.maxCost" type="text" class="form-control"></div>
 	      <br>
 	      <div><button class="btn" style="float:right;" ng-click="search()">Pretraži</button></div>
 	      <div><button class="btn" style="float:left;" ng-click="allItems.reload()">Sve</button></div>
