--- a/ProjaraWeb/WebContent/views/menadzer_kategorije_artikala.html
+++ b/ProjaraWeb/WebContent/views/menadzer_kategorije_artikala.html
@@ -1,5 +1,5 @@
 <!-- <div data-ng-include="'views/menadzer_navBar.html'"></div>-->
-
+<meta charset="UTF-8">
 <div data-ng-controller="menadzer_kategorijeArtikalaController">
 	
 	<div style='margin-left: 20%;margin-right: 20%;margin-bottom: 10%'>
