--- a/ProjaraWeb/WebContent/views/menadzer_addCatCustomer.html
+++ b/ProjaraWeb/WebContent/views/menadzer_addCatCustomer.html
@@ -1,7 +1,9 @@
 <meta charset="UTF-8">
 <div>
 	<div class="modal-header">
-		<b> Dodeljivanje kategorije kupcima </b>
+		<b> Dodeljivanje kategorije kupcima </b> <br/> <br/>
+		<b> Oznaka kategorije: {{category.categoryCode}}</b> <br/>
+		<b> Naziv kategorije: {{category.name}}</b>
 	</div>
 	
 	<div class='modal-body'>
